[package]
name = "clam"
version = "0.1.0"
authors = ["ben","matthew"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.5.15", features = ["derive"] }
csv = "1.3.0"
serde = { version="1.0.206", features = ["derive"]}
regex = "1.10.6"
