[package]
name = "clam"
version = "0.1.1"
authors = ["Woody", "ben", "matthew"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.5.39", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
zstd = "0.13.3"


[package.metadata]
rustflags = ["-Awarnings"]
