[package]
name = "lease_generation"
version = "0.1.1"
authors = ["Y.Wu", "ben", "matthew"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.6.0", features = ["derive"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.3"
zstd = "0.13.3"


[package.metadata]
rustflags = ["-Awarnings"]
